--- a/app/src/main/res/layout/item_indicator.xml
+++ b/app/src/main/res/layout/item_indicator.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:id="@+id/itemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:minHeight="80dp"
-    android:gravity="center">
+    android:orientation="vertical">
 
     <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/indicator"
+        style="@style/AVLoadingIndicatorView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/indicator"
-        app:indicatorName="BallPulseIndicator"
-        style="@style/AVLoadingIndicatorView"
-        />
+        app:indicatorName="BallPulseIndicator" />
 
 </LinearLayout>
