--- a/app/src/main/res/layout/item_indicator.xml
+++ b/app/src/main/res/layout/item_indicator.xml
@@ -8,7 +8,7 @@
     android:minHeight="80dp"
     android:orientation="vertical">
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <com.frogobox.loadingindicator.AVLoadingIndicatorView
         android:id="@+id/indicator"
         style="@style/AVLoadingIndicatorView"
         android:layout_width="wrap_content"
